--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ lerna-debug.log*
 # OS
 .DS_Store
 
+# environment variables
+.env
+.env.local
+.env.development
+.env.test
+
 # Tests
 /coverage
 /.nyc_output
