--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
+    "typeorm": "typeorm-ts-node-commonjs -d src/configs/typeorm.config-migration.ts",
+    "typeorm:dev": "cross-env NODE_ENV=development DB_NAME=db.sqlite typeorm-ts-node-commonjs -d src/configs/typeorm.config-migration.ts",
+    "typeorm:test": "cross-env NODE_ENV=test DB_NAME=test.sqlite typeorm-ts-node-commonjs -d src/configs/typeorm.config-migration.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -26,7 +29,6 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.4",
-    "@types/cookie-session": "^2.0.44",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-session": "^2.0.0",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
